--- a/frontend/fuckin.css
+++ b/frontend/fuckin.css
@@ -1,31 +1,45 @@
+html, body {
+	height: 100%;
+}
+* {
+	margin:0;
+	padding:0
+}
+h1, h2, p {
+	margin:0 0 1em 0
+}
+h1 {
+	text-align:center
+}
 body {
-    padding: 0px;
-    margin: 0px;
+	background:#ffffcc;
 }
-.seperator {
-    width: 100%;
-    border-top: 6px solid purple;
+#header {
+	position:fixed;
+	top:0;
+	right:0;
+	left:0;
+	z-index:999;
 }
-.header {
-    position: fixed;
-    background-color: #0fff00;
-    width: 100%;
+.head-inner {
+	width:100%;
+	height: 100px;
+	background:url(images/transp4.png) repeat-x 0 0;
 }
-.header.title {
-    font-size: 25px;
-    font-family: "Cantarell"
+#outer {
+	position: relative;
+	width:100%;
 }
-.bottom {
-    width: 100%;
-    position: fixed;
-    bottom: 0px;
-    background-color: #ffffff;
+#content {
+	margin:auto;
+	width:760px;
+	padding:100px 0;
 }
-.bottom-button-box {
-    display: flex;
-    background-color: #0feeee;
-    justify-content: space-between;
-}
-.bottom-button {
-    margin: 10px
+#footer {
+	position:fixed;
+	left:0;
+	width:100%;
+	height:100px;
+	bottom:0px;
+	background:url(images/transp3.png) repeat-x 0 0;
 }
