--- a/frontend/fuckin.css
+++ b/frontend/fuckin.css
@@ -1,45 +1,33 @@
-html, body {
-	height: 100%;
-}
-* {
-	margin:0;
-	padding:0
-}
-h1, h2, p {
-	margin:0 0 1em 0
-}
-h1 {
-	text-align:center
-}
 body {
-	background:#ffffcc;
+    margin: auto;
 }
-#header {
-	position:fixed;
-	top:0;
-	right:0;
-	left:0;
-	z-index:999;
+.header {
+    background-color: pink;
+    position: fixed;
+    padding: 10px;
+    /*text-align: center;*/
+    width: 100%;
 }
-.head-inner {
-	width:100%;
-	height: 100px;
-	background:url(images/transp4.png) repeat-x 0 0;
+.hamburger-icon {
+    width: 25px;
 }
-#outer {
-	position: relative;
-	width:100%;
+.header-title {
+    font-size: 20px;
+    text-align: center;
 }
-#content {
-	margin:auto;
-	width:760px;
-	padding:100px 0;
+.main-content {
+    padding: 90px 5px 0;
+    overflow-x: hidden; 
+    overflow-y: scroll; 
 }
-#footer {
-	position:fixed;
-	left:0;
-	width:100%;
-	height:100px;
-	bottom:0px;
-	background:url(images/transp3.png) repeat-x 0 0;
+.footer {
+    background-color: pink;
+    position: fixed;
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    bottom: 0px;
+}
+.footer-button {
+    padding: 10px;
 }
